Add the initial logic of the program